Bug 166445 - highlight bug
Summary: highlight bug
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.2.3.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.5 target:25...
Keywords: bibisected, bisected, filter:xls, regression
Depends on:
Blocks:
 
Reported: 2025-05-03 05:56 UTC by Cristiano
Modified: 2025-05-30 11:52 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cristiano 2025-05-03 05:56:05 UTC
Description:
When select a row for change highlight background color, work, but after restart remain only in columns with text.


Steps to Reproduce:
1.open new calc file
2.write text column A1 and C1
3.select row 1 and change backgorund color
4.save file
5.open file and see that only A1 and C1 keep background color

Actual Results:
loose background color of cell without text

Expected Results:
remain background color on the row


Reproducible: Always


User Profile Reset: No

Additional Info:
[Information automatically included from LibreOffice]
Locale: it
Module: StartModule
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 Mateusz Wlazłowski 2025-05-03 09:27:15 UTC
No reproduce. Could you check in safe mode in Help > Restart in Safe Mode


Thanks


Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: bbb074479178df812d175f709636b368952c2ce3
CPU threads: 8; OS: Linux 6.11; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Flatpak
Calc: threaded


Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: bbb074479178df812d175f709636b368952c2ce3
CPU threads: 2; OS: Windows 11 X86_64 (10.0 build 22621); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 2 Takenori Yasuda 2025-05-03 09:43:48 UTC
NOT CONFIRMED in my environment.

Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: bbb074479178df812d175f709636b368952c2ce3
CPU threads: 8; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo
Comment 3 BogdanB 2025-05-03 10:19:05 UTC
No problem in
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: bbb074479178df812d175f709636b368952c2ce3
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Cristiano, like Mateusz said, Could you check in safe mode in Help > Restart in Safe Mode. Maybe your problem will be gone after that.
Comment 4 Cristiano 2025-05-04 09:48:17 UTC
I try in safe mode, but is the same.
I miss that i save file how Excel 97-2003 (*.xls)
Comment 5 raal 2025-05-04 11:02:29 UTC
I can confirm with Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 32c7035824e50429c4ffeb43d0bdf306ba8874e9
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

but not in Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 6 raal 2025-05-04 11:19:46 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-25.2.
Adding Cc: to Noel Grandin ; Could you possibly take a look at this one?
Thanks
 7385788d4be95ca6f8af173f2446220b5bacd991 is the first bad commit
commit 7385788d4be95ca6f8af173f2446220b5bacd991
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Tue Feb 11 22:36:16 2025 +0100

    source cadfb0db14c6ff96688259b8a1eeb8615a2f8a49

181385: tdf#165080 Background color cells are reset to white | https://gerrit.libreoffice.org/c/core/+/181385
Comment 7 Commit Notification 2025-05-26 16:06:34 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a0dd1c4a363b9d4d2a16ff82acc3ada0c075cb65

tdf#166445 highlight bug

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-05-27 07:36:09 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/9c1a525c417c8ebe4a90abf00536a74bdd2de7c3

tdf#166445 highlight bug

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-05-28 12:04:12 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/37ca6715d0df17054d8d8e627ea88c96db67190b

tdf#166445: sc_subsequent_filters_test2: Add test

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-05-30 11:52:37 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-4":

https://git.libreoffice.org/core/commit/851e2ee9fcd8d60111f54b56fc280da4d3074345

tdf#166445 highlight bug

It will be available in 25.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.