tdf#166445 highlight bug

So we revert two commits here
    commit cadfb0db14c6ff96688259b8a1eeb8615a2f8a49
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon Feb 10 13:20:24 2025 +0200
    tdf#165080 Background color cells are reset to white

and
    commit 2d208c4e42595bb85fd0ef726a89e10dd32b48b1
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Jun 25 09:03:49 2024 +0200
    tdf#161210 speed xls load

And go with a simpler change in XclImpXFRangeBuffer::SetRowDefXF
which seems to preserve most of the performance benefits without
the drawbacks

Change-Id: I2456e122146c4f0bb6763e18fca996bbbab17023
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185800
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit a0dd1c4a363b9d4d2a16ff82acc3ada0c075cb65)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185860
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>