sc/source/filter/excel/xistyle.cxx
@@ -1890,7 +1890,6 @@ XclImpXFRangeBuffer::~XclImpXFRangeBuffer()
 void XclImpXFRangeBuffer::Initialize()
 {
     maColumns.clear();
-    maRows.clear();
     maHyperlinks.clear();
     maMergeList.RemoveAll();
 }
@@ -1943,10 +1942,8 @@ void XclImpXFRangeBuffer::SetBoolXF( const ScAddress& rScPos, sal_uInt16 nXFInde
 
 void XclImpXFRangeBuffer::SetRowDefXF( SCROW nScRow, sal_uInt16 nXFIndex )
 {
-    size_t nIndex = static_cast< size_t >( nScRow );
-    if( maRows.size() <= nIndex )
-        maRows.resize( nIndex + 1 );
-    maRows[ nIndex ].emplace(nXFIndex);
+    for( SCCOL nScCol = 0; nScCol < static_cast<SCCOL>(maColumns.size()); ++nScCol )
+        SetXF( ScAddress( nScCol, nScRow, 0 ), nXFIndex, xlXFModeRow );
 }
 
 void XclImpXFRangeBuffer::SetColumnDefXF( SCCOL nScCol, sal_uInt16 nXFIndex )
@@ -2050,16 +2047,6 @@ void XclImpXFRangeBuffer::Finalize()
     }
     if( pendingColStart != -1 )
         rDocImport.setAttrEntries(nScTab, pendingColStart, pendingColEnd, std::move(aPendingAttrParam));
-
-    // apply row styles
-    for( SCROW nScRow = 0; nScRow < static_cast<SCROW>(maRows.size()); ++nScRow )
-    {
-        if (!maRows[nScRow])
-            continue;
-        sal_uInt16 nXFIndex = *maRows[nScRow];
-        for( nScCol = 0; nScCol < static_cast<SCCOL>(maColumns.size()); ++nScCol )
-            SetXF( ScAddress( nScCol, nScRow, 0 ), nXFIndex, xlXFModeRow );
-    }
 
     // insert hyperlink cells
     for( const auto& [rXclRange, rUrl] : maHyperlinks )
